--- a/css/styles.css
+++ b/css/styles.css
@@ -22,20 +22,26 @@
   align-items: center;
 }
 
-/* line 28, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 26, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card1 i {
+  background-color: grey;
+  border-radius: 100%;
+}
+
+/* line 33, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card1:hover {
   transform: translateY(10px);
   background-color: grey;
   color: white;
 }
 
-/* line 34, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
-.service-card1:hover .read-more1 {
+/* line 39, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card1:hover .read-more1, .service-card1:hover i {
   background-color: white;
   color: grey;
 }
 
-/* line 41, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 46, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card2 {
   text-align: center;
   border-radius: 5%;
@@ -49,20 +55,26 @@
   align-items: center;
 }
 
-/* line 56, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 59, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card2 i {
+  background-color: #4646d1;
+  border-radius: 100%;
+}
+
+/* line 66, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card2:hover {
   transform: translateY(10px);
   background-color: #4646d1;
   color: white;
 }
 
-/* line 62, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
-.service-card2:hover .read-more2 {
+/* line 72, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card2:hover .read-more2, .service-card2:hover i {
   background-color: white;
   color: #4646d1;
 }
 
-/* line 71, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 81, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card3 {
   text-align: center;
   border-radius: 5%;
@@ -76,20 +88,26 @@
   align-items: center;
 }
 
-/* line 86, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 94, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card3 i {
+  background-color: #25ad25;
+  border-radius: 100%;
+}
+
+/* line 101, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card3:hover {
   transform: translateY(10px);
   background-color: #25ad25;
   color: white;
 }
 
-/* line 92, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
-.service-card3:hover .read-more3 {
+/* line 107, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card3:hover .read-more3, .service-card3:hover i {
   background-color: white;
   color: #25ad25;
 }
 
-/* line 101, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 116, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card4 {
   text-align: center;
   border-radius: 5%;
@@ -103,20 +121,26 @@
   align-items: center;
 }
 
-/* line 116, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 129, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card4 i {
+  background-color: #f62525;
+  border-radius: 100%;
+}
+
+/* line 136, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card4:hover {
   transform: translateY(10px);
   background-color: #f62525;
   color: white;
 }
 
-/* line 122, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
-.service-card4:hover .read-more4 {
+/* line 142, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card4:hover .read-more4, .service-card4:hover i {
   background-color: white;
   color: #f62525;
 }
 
-/* line 131, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 151, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card5 {
   text-align: center;
   border-radius: 5%;
@@ -130,7 +154,13 @@
   align-items: center;
 }
 
-/* line 146, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 164, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card5 i {
+  background-color: #9127cf;
+  border-radius: 100%;
+}
+
+/* line 172, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card5:hover {
   text-align: center;
   border-radius: 5%;
@@ -141,13 +171,13 @@
   color: white;
 }
 
-/* line 157, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
-.service-card5:hover .read-more5 {
+/* line 183, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card5:hover .read-more5, .service-card5:hover i {
   background-color: white;
   color: #9127cf;
 }
 
-/* line 166, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 192, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card6 {
   text-align: center;
   border-radius: 5%;
@@ -161,20 +191,26 @@
   align-items: center;
 }
 
-/* line 181, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 205, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card6 i {
+  background-color: #cd4747;
+  border-radius: 100%;
+}
+
+/* line 212, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card6:hover {
   transform: translateY(10px);
   background-color: #cd4747;
   color: white;
 }
 
-/* line 187, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
-.service-card6:hover .read-more6 {
+/* line 218, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card6:hover .read-more6, .service-card6:hover i {
   background-color: white;
   color: #cd4747;
 }
 
-/* line 196, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 227, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card7 {
   text-align: center;
   border-radius: 5%;
@@ -188,27 +224,33 @@
   align-items: center;
 }
 
-/* line 211, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 240, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card7 i {
+  background-color: #de3917;
+  border-radius: 100%;
+}
+
+/* line 247, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .service-card7:hover {
   transform: translateY(10px);
   background-color: #de3917;
   color: white;
 }
 
-/* line 218, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
-.service-card7:hover .read-more7 {
+/* line 254, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+.service-card7:hover .read-more7, .service-card7:hover i {
   background-color: white;
   color: #de3917;
 }
 
 @media (max-width: 768px) {
-  /* line 227, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+  /* line 263, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
   .service-card1 .service-card2 .service-card3 .service-card4 .service-card5 .service-card6 .service-card7 {
     width: 100%;
   }
 }
 
-/* line 233, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 269, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card1 {
   text-align: center;
   border-radius: 5%;
@@ -225,17 +267,17 @@
   text-align: left;
 }
 
-/* line 239, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 275, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card1 h3 {
   color: grey;
 }
 
-/* line 245, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 281, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card1:hover {
   transform: translateY(10px);
 }
 
-/* line 250, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 286, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card2 {
   text-align: center;
   border-radius: 5%;
@@ -252,17 +294,17 @@
   text-align: left;
 }
 
-/* line 257, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 293, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card2 h3 {
   color: #c82727;
 }
 
-/* line 263, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 299, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card2:hover {
   transform: translateY(10px);
 }
 
-/* line 268, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 304, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card3 {
   text-align: center;
   border-radius: 5%;
@@ -280,12 +322,12 @@
   text-align: left;
 }
 
-/* line 276, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 312, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card3 h3 {
   color: #e894e8;
 }
 
-/* line 282, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
+/* line 318, ../Scion Projects/CSS HTML Reflections/input/servicecards.scss */
 .news-card3:hover {
   transform: translateY(10px);
 }
