Further file structuer changes, moved files to partials folder in scss. Fixed minor issues in htm

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,9 @@
 
 //header style
-@import "variables.scss";
-@import "servicecards.scss";
-@import "mixins.scss";
-@import "buttons.scss";
+@import "partials/_variables";
+@import "partials/_servicecards";
+@import "partials/_mixins";
+@import "partials/_buttons";
 .nav-btn
 {
   width: $btn-width;
