Menu and Search Buttons

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,18 @@
 @import "partials/_servicecards";
 @import "partials/_mixins";
 @import "partials/_buttons";
+
+.header
+{
+  width:100%
+}
+
+.phone
+{
+ margin-top: 5px;
+display: none;
+}
+
 .nav-btn
 {
   width: $btn-width;
@@ -231,5 +243,11 @@ a
     
   }
 
+  .phone
+  {
+    display:block;
+  }
+
+ 
 }
 
