--- a/css/styles.css
+++ b/css/styles.css
@@ -430,32 +430,40 @@
 }
 
 /* line 13, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+.brand-images {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  margin-left: 500px;
+}
+
+/* line 21, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .phone {
   margin-top: 5px;
   display: none;
 }
 
-/* line 19, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 27, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .nav-btn {
   width: 3rem;
   height: 3rem;
   margin: 5px;
 }
 
-/* line 26, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 34, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .review-text {
   font-weight: bold;
   font-style: italic;
   color: white;
 }
 
-/* line 33, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 41, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .review-writer {
   opacity: 0.8;
   color: white;
 }
 
-/* line 41, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 49, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropbtn-readmore1 {
   background-color: #4CAF50;
   color: white;
@@ -467,40 +475,40 @@
   margin-left: 0;
 }
 
-/* line 48, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 56, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .logo {
   display: flex;
   float: left;
 }
 
-/* line 55, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 63, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .navbar-style {
   height: 2em;
   padding: 25%;
 }
 
-/* line 61, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 69, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .bold {
   font-weight: bold;
   text-align: center;
   color: white;
 }
 
-/* line 69, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 77, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .navflex {
   display: inline-flex;
   align-items: center;
   flex-direction: column;
 }
 
-/* line 79, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 87, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .nav-button {
   display: flex;
   flex-wrap: wrap;
   margin: 0 5px 10px 5px;
 }
 
-/* line 86, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 94, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .button {
   background-color: grey;
   /* Green */
@@ -513,7 +521,7 @@
   cursor: pointer;
 }
 
-/* line 99, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 107, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .footer-style {
   width: 100%;
   padding: 0 5% 0 5%;
@@ -521,34 +529,34 @@
   justify-content: center;
 }
 
-/* line 108, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 116, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .email {
   margin: 10px 5% 0 5%;
   padding-bottom: 10px;
 }
 
-/* line 116, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 124, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .email-title {
   margin: 10px 5% 10px 5%;
 }
 
-/* line 121, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 129, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .email-background {
   background-color: lightgray;
 }
 
-/* line 126, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 134, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .review {
   margin: 0 5% 0 5%;
   padding: 3%;
 }
 
-/* line 132, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 140, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .white-text {
   color: white;
 }
 
-/* line 137, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 145, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .news-image {
   margin-top: 0;
   width: 100%;
@@ -557,7 +565,7 @@
   margin-bottom: 5px;
 }
 
-/* line 146, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 154, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .news-footer {
   margin: 20px 5% 0 5%;
   border-top: 0.5px solid black;
@@ -566,30 +574,30 @@
   padding-top: 5px;
 }
 
-/* line 160, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 168, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* line 165, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 173, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .jumbotron-style {
   background-image: url("../img/home-oaVs.webp");
 }
 
-/* line 171, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 179, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .star-rating {
   color: gold;
 }
 
-/* line 176, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 184, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .jumbotron-font {
   color: white;
   font-weight: bold;
   text-align: center;
 }
 
-/* line 184, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 192, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -599,7 +607,7 @@
   z-index: 1;
 }
 
-/* line 194, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 202, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -607,40 +615,40 @@
   display: block;
 }
 
-/* line 204, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 212, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 a:hover .nav-item:hover .dropbtn-readmore1 {
   background-color: #f1f1f1;
 }
 
-/* line 214, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 222, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropbtn-readmore1:hover .dropdown:focus .dropdown-content {
   display: flex;
   flex-direction: column;
 }
 
-/* line 221, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 229, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 footer {
   width: 75%;
 }
 
-/* line 226, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 234, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 a {
   text-decoration: underline;
   color: white;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-/* line 233, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 241, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown:hover .dropdown:focus .dropbtn {
   background-color: #3e8e41;
 }
 
 @media (max-width: 768px) {
-  /* line 240, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+  /* line 248, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
   .nav-button {
     display: none;
   }
-  /* line 246, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+  /* line 254, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
   .phone {
     display: block;
   }
