--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,6 +10,14 @@
   width:100%
 }
 
+.brand-images
+{
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  margin-left:500px;
+}
+
 .phone
 {
  margin-top: 5px;
