HTML validator, colours, images, formatting

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,6 +18,13 @@
   margin-left:500px;
 }
 
+.media-image
+{
+    height: 30px;
+    width:30px;
+    float: right;
+}
+
 .phone
 {
  margin-top: 5px;
