--- a/css/styles.css
+++ b/css/styles.css
@@ -438,32 +438,39 @@
 }
 
 /* line 21, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+.media-image {
+  height: 30px;
+  width: 30px;
+  float: right;
+}
+
+/* line 28, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .phone {
   margin-top: 5px;
   display: none;
 }
 
-/* line 27, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 34, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .nav-btn {
   width: 3rem;
   height: 3rem;
   margin: 5px;
 }
 
-/* line 34, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 41, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .review-text {
   font-weight: bold;
   font-style: italic;
   color: white;
 }
 
-/* line 41, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 48, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .review-writer {
   opacity: 0.8;
   color: white;
 }
 
-/* line 49, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 56, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropbtn-readmore1 {
   background-color: #4CAF50;
   color: white;
@@ -475,40 +482,40 @@
   margin-left: 0;
 }
 
-/* line 56, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 63, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .logo {
   display: flex;
   float: left;
 }
 
-/* line 63, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 70, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .navbar-style {
   height: 2em;
   padding: 25%;
 }
 
-/* line 69, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 76, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .bold {
   font-weight: bold;
   text-align: center;
   color: white;
 }
 
-/* line 77, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 84, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .navflex {
   display: inline-flex;
   align-items: center;
   flex-direction: column;
 }
 
-/* line 87, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 94, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .nav-button {
   display: flex;
   flex-wrap: wrap;
   margin: 0 5px 10px 5px;
 }
 
-/* line 94, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 101, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .button {
   background-color: grey;
   /* Green */
@@ -521,7 +528,7 @@
   cursor: pointer;
 }
 
-/* line 107, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 114, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .footer-style {
   width: 100%;
   padding: 0 5% 0 5%;
@@ -529,34 +536,34 @@
   justify-content: center;
 }
 
-/* line 116, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 123, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .email {
   margin: 10px 5% 0 5%;
   padding-bottom: 10px;
 }
 
-/* line 124, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 131, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .email-title {
   margin: 10px 5% 10px 5%;
 }
 
-/* line 129, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 136, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .email-background {
   background-color: lightgray;
 }
 
-/* line 134, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 141, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .review {
   margin: 0 5% 0 5%;
   padding: 3%;
 }
 
-/* line 140, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 147, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .white-text {
   color: white;
 }
 
-/* line 145, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 152, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .news-image {
   margin-top: 0;
   width: 100%;
@@ -565,7 +572,7 @@
   margin-bottom: 5px;
 }
 
-/* line 154, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 161, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .news-footer {
   margin: 20px 5% 0 5%;
   border-top: 0.5px solid black;
@@ -574,30 +581,30 @@
   padding-top: 5px;
 }
 
-/* line 168, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 175, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* line 173, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 180, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .jumbotron-style {
   background-image: url("../img/home-oaVs.webp");
 }
 
-/* line 179, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 186, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .star-rating {
   color: gold;
 }
 
-/* line 184, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 191, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .jumbotron-font {
   color: white;
   font-weight: bold;
   text-align: center;
 }
 
-/* line 192, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 199, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -607,7 +614,7 @@
   z-index: 1;
 }
 
-/* line 202, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 209, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -615,40 +622,40 @@
   display: block;
 }
 
-/* line 212, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 219, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 a:hover .nav-item:hover .dropbtn-readmore1 {
   background-color: #f1f1f1;
 }
 
-/* line 222, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 229, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropbtn-readmore1:hover .dropdown:focus .dropdown-content {
   display: flex;
   flex-direction: column;
 }
 
-/* line 229, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 236, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 footer {
   width: 75%;
 }
 
-/* line 234, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 241, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 a {
   text-decoration: underline;
   color: white;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-/* line 241, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+/* line 248, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
 .dropdown:hover .dropdown:focus .dropbtn {
   background-color: #3e8e41;
 }
 
 @media (max-width: 768px) {
-  /* line 248, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+  /* line 255, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
   .nav-button {
     display: none;
   }
-  /* line 254, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
+  /* line 261, ../Scion Projects/CSS HTML Reflections/scss/styles.scss */
   .phone {
     display: block;
   }
